# rules_flutter

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  MODULE.bazel  README.md  analysis_options.yaml  multitool.lock.json
dart/: BUILD.bazel  flutter_sdk_binary.bzl
e2e/android_example/: BUILD.bazel  MODULE.bazel  pubspec.yaml
e2e/android_example/custom_runner/: AndroidManifest.xml  MainActivity.kt
e2e/android_example/lib/: main.dart  native_add.dart  native_add_ffi.dart  native_add_stub.dart
e2e/android_example/native/: add.c  add.h
e2e/android_example/playwright/: BUILD.bazel  web.spec.js
e2e/android_example/test/: verify_android_apk_test.dart  verify_android_app_test.dart
e2e/codegen/: BUILD.bazel  MODULE.bazel  pubspec.yaml
e2e/codegen/dep_lib/: BUILD.bazel
e2e/codegen/dep_part/: BUILD.bazel
e2e/codegen/lib/: main.dart  model.dart  order.dart  user.dart
e2e/codegen/test/: user_test.dart
e2e/codegen/tools/: aggregate_generator.dart  json_generator.dart  simple_generator.dart
e2e/cross_compile_example/: .bazelrc  BUILD.bazel  MODULE.bazel  pubspec.yaml
e2e/cross_compile_example/lib/: main.dart
e2e/ffi_example/: BUILD.bazel  MODULE.bazel  ios_sim_debug.bzl  pubspec.yaml
e2e/ffi_example/add_plugin/: BUILD.bazel
e2e/ffi_example/lib/: main.dart
e2e/ffi_example/mul_plugin/: BUILD.bazel
e2e/ffi_example/native/: add.h  mul.c  mul.h
e2e/ffi_example/test/: verify_ios_simulator_test.dart  verify_linux_bundle_test.dart  verify_linux_runtime_test.dart  verify_macos_bundle_test.dart  verify_macos_runtime_test.dart  verify_windows_bundle_test.dart  verify_windows_runtime_test.dart
e2e/ffi_plugin_example/: BUILD.bazel  MODULE.bazel  pubspec.yaml
e2e/ffi_plugin_example/device.example/: BUILD.bazel.example
e2e/ffi_plugin_example/lib/: main.dart
e2e/ffi_plugin_example/multiply_plugin/: BUILD.bazel
e2e/ffi_plugin_example/native/: multiply.c  multiply.h
e2e/ffi_plugin_example/test/: verify_linux_bundle_test.dart  verify_macos_bundle_test.dart
e2e/hello_world/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  hello_test.dart  pubspec.yaml
e2e/hello_world/device.example/: BUILD.bazel.example
e2e/hello_world/lib/: common_widgets.dart  main.dart
e2e/hello_world/playwright/: .gitignore  web.spec.js
e2e/hello_world/test/: dart_defines_test.dart  verify_macos_entitlements_test.dart  verify_pub_assets_test.dart
e2e/ios_example/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  pubspec.yaml
e2e/ios_example/custom_runner/: AppDelegate.swift
e2e/ios_example/device.example/: BUILD.bazel.example
e2e/ios_example/lib/: main.dart
e2e/linux_example/: BUILD.bazel  MODULE.bazel  pubspec.yaml
e2e/linux_example/custom_runner/: custom_runner.cc
e2e/linux_example/lib/: main.dart
e2e/linux_example/test/: verify_linux_bundle_test.dart
e2e/macos_example/: BUILD.bazel  MODULE.bazel  pubspec.yaml
e2e/macos_example/custom_runner/: AppDelegate.swift  MainFlutterWindow.swift
e2e/macos_example/lib/: main.dart
e2e/macos_example/test/: verify_macos_app_test.dart  verify_macos_bundle_test.dart
e2e/multi_window_example/: .bazelrc  BUILD.bazel  MODULE.bazel  pubspec.yaml
e2e/multi_window_example/device.example/: BUILD.bazel.example
e2e/multi_window_example/ios/: AppDelegate.swift  Info.plist  PlannerSceneDelegate.swift
e2e/multi_window_example/lib/: main.dart
e2e/multi_window_example/macos/: AppDelegate.swift  PlannerWindow.swift
e2e/multi_window_example/test/: verify_macos_bundle_test.dart
e2e/plugin_example/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md  app_proguard.pro  debug_apk.bzl  pubspec.yaml
e2e/plugin_example/device.example/: BUILD.bazel.example
e2e/plugin_example/greeting_plugin/: BUILD.bazel
e2e/plugin_example/lib/: main.dart
e2e/plugin_example/linux/: CMakeLists.txt
e2e/smoke/: BUILD.bazel  MODULE.bazel
e2e/web_example/: BUILD.bazel  MODULE.bazel  pubspec.yaml
e2e/web_example/lib/: main.dart
e2e/windows_example/: BUILD.bazel  MODULE.bazel  pubspec.yaml
ext/: BUILD.bazel
flutter/: BUILD.bazel  android.bzl  defs.bzl  extensions.bzl  ios.bzl  linux.bzl  macos.bzl  native_assets.bzl  providers.bzl  repositories.bzl  toolchain.bzl  web.bzl  windows.bzl
flutter/private/: BUILD.bazel  app_entrypoint.bzl  artifact_urls.bzl  build_settings.bzl  cc_runner_compile.bzl  common.bzl  constants.bzl  engine_helpers.bzl  flutter_android_application.bzl  flutter_android_engine_repo.bzl  flutter_android_manifest_merge.bzl  flutter_android_plugin_library.bzl  flutter_android_registrant.bzl  flutter_aot_compile.bzl  flutter_aot_target.bzl  flutter_apple_plugin_library.bzl  flutter_apple_plugins_aggregator.bzl  flutter_application.bzl  flutter_asset_bundle.bzl  flutter_compile.bzl  flutter_cross_repo.bzl  flutter_data_asset.bzl  flutter_desktop_cross_repo.bzl  flutter_desktop_engine_repo.bzl  flutter_desktop_plugin_info.bzl  flutter_ios_application.bzl  flutter_ios_engine_repo.bzl  flutter_ios_registrant.bzl  flutter_kernel_target.bzl  flutter_library.bzl  flutter_linux_application.bzl  flutter_linux_engine_rule.bzl  flutter_linux_plugin_library.bzl  flutter_linux_registrant.bzl  flutter_linux_sysroot_repo.bzl  flutter_macos_application.bzl  flutter_macos_engine_repo.bzl  flutter_macos_registrant.bzl  flutter_material_icons.bzl  flutter_native_asset.bzl  (+19 more)
flutter/tests/: BUILD.bazel  artifact_urls_test.bzl  asset_bundle_test.bzl  common_test.bzl  flutter_application_test.bzl  flutter_library_test.bzl  flutter_plugin_test.bzl  flutter_pub_package_test.bzl  flutter_pubspec_test.bzl  macos_test.bzl  manifest_merge_test.bzl  native_assets_test.bzl  platform_bundle_test.bzl  plugin_registrant_test.bzl  shader_compile_test.bzl  toolchain_test.bzl  toolchains_repo_test.bzl  validation_test.bzl  versions_test.bzl  web_test.bzl
tools/dev_tool/: BUILD.bazel  pubspec.yaml  source_repo.bzl
tools/ios_screenshot/: BUILD.bazel  requirements.in  requirements_lock.txt  screenshot.py  tunneld.py
tools/macos_screenshot/: BUILD.bazel  screenshot.swift
(+182 files in other folders)
