load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_android//android:rules.bzl", "android_binary")
load("@rules_dart//dart:defs.bzl", "dart_test")
load(
    "@rules_flutter//flutter:android.bzl",
    "flutter_android_app",
    "flutter_android_bundle",
    "flutter_android_engine",
    "flutter_android_manifest_gen",
    "flutter_android_runner_lib_gen",
)
load("@rules_flutter//flutter:defs.bzl", "flutter_application")
load("@rules_flutter//flutter:web.bzl", "flutter_web_bundle")
load("@rules_java//java:java_import.bzl", "java_import")
load("@rules_kotlin//kotlin:android.bzl", "kt_android_library")

exports_files(["pubspec.lock"])

# =============================================================================
# Shared: Flutter application (Dart compilation)
# =============================================================================

flutter_application(
    name = "app_flutter",
    package_name = "android_example",
    main = "lib/main.dart",
    deps = [
        "@deps//:flutter",
        "@rules_flutter//flutter:material_icons",
    ],
)

# =============================================================================
# Approach 1: Flutter-generated runner (flutter_android_app)
#
# Recommended for most users. Requires android/app/src/main/ from
# `flutter create --platforms=android .`.
# The macro auto-discovers the manifest and resources from the conventional
# directory and wires everything automatically.
# =============================================================================

flutter_android_app(
    name = "app",
    package_name = "com.example.flutterapp",
    application = ":app_flutter",
)

# =============================================================================
# Shared Android targets (used by approaches 2 & 3)
# =============================================================================

flutter_android_bundle(
    name = "app_android",
    application = ":app_flutter",
)

# Extract native_libs.jar for composable wiring.
filegroup(
    name = "app_native_libs_jar",
    srcs = [":app_android"],
    output_group = "native_libs_jar",
    tags = ["manual"],
)

java_import(
    name = "app_native_libs",
    jars = [":app_native_libs_jar"],
    tags = ["manual"],
)

flutter_android_engine(
    name = "app_engine",
)

# Extract flutter_assets for composable approaches.
filegroup(
    name = "app_flutter_assets",
    srcs = [":app_android"],
    output_group = "mobile_install",
    tags = ["manual"],
)

# =============================================================================
# Approach 2: Bazel-generated runner (flutter_android_runner_lib_gen)
#
# For users without `flutter create` output. Uses template manifest and
# Kotlin MainActivity from rules_flutter. Only needs package_name.
# =============================================================================

flutter_android_manifest_gen(
    name = "bazel_runner_manifest",
    package_name = "com.example.flutterapp.bazelrunner",
    app_name = "Flutter App (Bazel Runner)",
)

flutter_android_runner_lib_gen(
    name = "bazel_runner_lib",
    package_name = "com.example.flutterapp.bazelrunner",
    engine = ":app_engine",
)

android_binary(
    name = "app_bazel_runner",
    assets = [":app_flutter_assets"],
    assets_dir = "assets",
    custom_package = "com.example.flutterapp.bazelrunner",
    manifest = ":bazel_runner_manifest",
    tags = ["manual"],
    deps = [
        ":app_engine",
        ":app_native_libs",
        ":bazel_runner_lib",
    ],
)

# =============================================================================
# Approach 3: Custom runner (manual wiring with Kotlin)
#
# For advanced users who want full control. User provides their own
# AndroidManifest.xml and custom Kotlin Activity, compiled via
# kt_android_library with flutter_android_bundle + flutter_android_engine.
# =============================================================================

kt_android_library(
    name = "custom_runner_lib",
    srcs = ["custom_runner/MainActivity.kt"],
    custom_package = "com.example.flutterapp.customrunner",
    manifest = "custom_runner/AndroidManifest.xml",
    tags = ["manual"],
    deps = [
        ":app_engine",
        "@rules_android_maven//:androidx_annotation_annotation",
        "@rules_android_maven//:androidx_lifecycle_lifecycle_common",
    ],
)

android_binary(
    name = "app_custom_runner",
    assets = [":app_flutter_assets"],
    assets_dir = "assets",
    custom_package = "com.example.flutterapp.customrunner",
    manifest = "custom_runner/AndroidManifest.xml",
    tags = ["manual"],
    deps = [
        ":app_engine",
        ":app_native_libs",
        ":custom_runner_lib",
    ],
)

# =============================================================================
# Web build — same Dart code, no native deps.
# =============================================================================

flutter_web_bundle(
    name = "app_web",
    package_name = "android_example",
    main = "lib/main.dart",
    deps = ["@deps//:flutter"],
)

# =============================================================================
# Tests
# =============================================================================

build_test(
    name = "android_app_build_test",
    targets = [":app"],
)

build_test(
    name = "android_bazel_runner_build_test",
    targets = [":app_bazel_runner"],
)

build_test(
    name = "android_custom_runner_build_test",
    targets = [":app_custom_runner"],
)

build_test(
    name = "web_build_test",
    targets = [":app_web"],
)

dart_test(
    name = "verify_android_apk_test",
    data = [":app"],
    main = "test/verify_android_apk_test.dart",
)

dart_test(
    name = "verify_android_app_test",
    data = [":app"],
    main = "test/verify_android_app_test.dart",
    tags = [
        "exclusive",
        "manual",
    ],
)
