load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_apple//apple:macos.bzl", "macos_application")
load("@rules_apple//apple:versioning.bzl", "apple_bundle_version")
load("@rules_dart//dart:defs.bzl", "dart_aggregate_codegen", "dart_codegen")
load("@rules_flutter//flutter:defs.bzl", "flutter_application", "flutter_test")
load(
    "@rules_flutter//flutter:macos.bzl",
    "MACOS_MINIMUM_OS_VERSION",
    "flutter_macos_engine",
    "flutter_macos_framework_gen",
    "flutter_macos_info_plist_gen",
    "flutter_macos_menu_xib_gen",
    "flutter_macos_native_libs_gen",
    "flutter_macos_registrant_gen",
    "flutter_macos_runner_lib_gen",
)
load("@rules_flutter//flutter:web.bzl", "flutter_web_bundle")

# --- Per-file codegen (dart_codegen) ---
# Generates a .g.dart companion for each source file independently.
# dart_codegen is single-source, so each input file gets its own target.

dart_codegen(
    name = "model_generated",
    package_name = "codegen_e2e",
    src = "lib/model.dart",
    generator = "tools/simple_generator.dart",
    output_suffixes = [".g.dart"],
)

dart_codegen(
    name = "order_generated",
    package_name = "codegen_e2e",
    src = "lib/order.dart",
    generator = "tools/simple_generator.dart",
    output_suffixes = [".g.dart"],
)

# --- Aggregate codegen (dart_aggregate_codegen) ---
# Reads ALL source files and produces a single registry output.

dart_aggregate_codegen(
    name = "model_registry",
    package_name = "codegen_e2e",
    srcs = [
        "lib/model.dart",
        "lib/order.dart",
    ],
    generator_script = "tools/aggregate_generator.dart",
    outputs = ["lib/registry.g.dart"],
)

# --- Flutter app consuming a generated part ---
# lib/user.dart declares `part 'user.g.dart'`; user.g.dart is generated below.
# Compiling the app exercises rules_flutter's kernel compile co-locating the
# generated part with its hand-written source sibling so the part resolves.

dart_codegen(
    name = "user_json",
    package_name = "codegen_e2e",
    src = "lib/user.dart",
    generator = "tools/json_generator.dart",
    output_suffixes = [".g.dart"],
)

flutter_application(
    name = "app",
    package_name = "codegen_e2e",
    srcs = [
        "lib/user.dart",
        ":user_json",
    ],
    main = "lib/main.dart",
    deps = [
        "//dep_lib",
        "//dep_part",
        "@deps//:flutter",
        "@rules_flutter//flutter:material_icons",
    ],
)

# =============================================================================
# macOS runner (Bazel-generated default runner — no `flutter create` files).
#
# This exists specifically so the dev tool's hot-reload path is exercised
# against an app whose *own* Dart package is source-assembled: `:app` mixes a
# source-tree file (lib/user.dart) with a generated one (:user_json), so
# `colocate_packages` rewrites the app package's lib_root to an assembled
# `*.pkgsrcs` tree-artifact, and its package_config.json rootUri becomes
# `app.codegen_e2e.pkgsrcs` rather than the source-tree `../../..`. Pure
# source-tree examples (macos_example, hello_world) never produce this shape,
# so this target is the only e2e coverage of hot reload over an assembled
# package. Uses the Bazel-generated runner so no `macos/` scaffold is needed.
# =============================================================================

flutter_macos_framework_gen(
    name = "app_framework",
    application = ":app",
)

flutter_macos_registrant_gen(
    name = "app_registrant",
    application = ":app",
)

flutter_macos_native_libs_gen(
    name = "app_native_libs",
    application = ":app",
)

flutter_macos_engine(
    name = "flutter_engine",
)

apple_bundle_version(
    name = "app_version",
    build_version = "1.0",
    short_version_string = "1.0",
    tags = ["manual"],
)

flutter_macos_info_plist_gen(
    name = "app_info_plist",
    app_name = "Codegen Example",
)

flutter_macos_menu_xib_gen(
    name = "app_menu_xib",
    app_name = "Codegen Example",
)

flutter_macos_runner_lib_gen(
    name = "app_runner_lib",
    engine = ":flutter_engine",
    module_name = "BazelRunner",
    registrant = ":app_registrant",
)

macos_application(
    name = "app_macos",
    additional_contents = {
        ":app_framework": "Frameworks",
        ":app_native_libs": "Frameworks",
    },
    bundle_id = "com.example.codegen",
    infoplists = [":app_info_plist"],
    minimum_os_version = MACOS_MINIMUM_OS_VERSION,
    resources = [":app_menu_xib"],
    # `manual` keeps this apple-bundling target out of the `//...` wildcard so
    # `bazel test //...` on Linux doesn't try (and fail) to resolve a C++
    # toolchain for it. macOS coverage comes via :macos_app_build_test, which
    # references it explicitly and carries the target_compatible_with guard.
    # Matches the macos_application pattern in the other e2e workspaces.
    tags = ["manual"],
    version = ":app_version",
    deps = [":app_runner_lib"],
)

# --- Build tests ---
# Verify the codegen rules produce their outputs, and that a Flutter app can
# compile while consuming a generated part.

build_test(
    name = "per_file_codegen_test",
    targets = [
        ":model_generated",
        ":order_generated",
    ],
)

build_test(
    name = "aggregate_codegen_test",
    targets = [":model_registry"],
)

# Verify the macOS runner over the source-assembled (.pkgsrcs) app builds.
build_test(
    name = "macos_app_build_test",
    target_compatible_with = ["@platforms//os:macos"],
    targets = [":app_macos"],
)

build_test(
    name = "flutter_codegen_test",
    targets = [":app"],
)

# Exercises: a flutter_test that imports `package:codegen_e2e/user.dart` —
# whose source-tree sibling has `part 'user.g.dart'` produced by `:user_json`
# in `bazel-out`. The test's `package:` URI must resolve to a single
# directory that holds both files, so the `part` directive finds its
# generated companion.
flutter_test(
    name = "user_test",
    package_name = "codegen_e2e",
    srcs = [
        "lib/user.dart",
        ":user_json",
    ],
    main = "test/user_test.dart",
    deps = [
        "@deps//:flutter",
        "@deps//:flutter_test",
    ],
)

# Exercises: a flutter_web_bundle whose `lib/main.dart` reaches `user.dart`
# (with `part 'user.g.dart'`) via a relative import — covering both the
# dart2js/dart2wasm compile and the icon-tree-shaking kernel compile. Both
# must reach `main.dart` through the same colocated package so its relative
# `import 'user.dart'` finds the assembled sibling.
flutter_web_bundle(
    name = "web_app",
    package_name = "codegen_e2e",
    srcs = [
        "lib/user.dart",
        ":user_json",
    ],
    compiler = "dart2js",
    main = "lib/main.dart",
    renderer = "canvaskit",
    deps = [
        "//dep_lib",
        "//dep_part",
        "@deps//:flutter",
        "@rules_flutter//flutter:material_icons",
    ],
)

build_test(
    name = "flutter_web_codegen_test",
    targets = [":web_app"],
)
