"E2e test: dart_codegen, dart_aggregate_codegen, and a Flutter app consuming a generated part (incl. a macOS runner that exercises hot reload over an assembled .pkgsrcs package)"

module(name = "rules_flutter_codegen_e2e")

bazel_dep(name = "rules_flutter", version = "0.0.0")
bazel_dep(name = "rules_dart", version = "0.4.5")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "apple_support", version = "2.5.4")
bazel_dep(name = "rules_apple", version = "4.5.3")
bazel_dep(name = "rules_cc", version = "0.2.19")
bazel_dep(name = "rules_swift", version = "3.6.1")
bazel_dep(name = "platforms", version = "1.1.0")

local_path_override(
    module_name = "rules_flutter",
    path = "../..",
)

flutter = use_extension("@rules_flutter//flutter:extensions.bzl", "flutter")
flutter.toolchain(flutter_version = "3.44.1")
flutter.pub(
    name = "deps",
    lock = "//:pubspec.lock",
)
use_repo(flutter, "deps", "flutter_macos_engine", "flutter_toolchains", "flutter_web_sdk")

register_toolchains("@flutter_toolchains//:all")
