"E2e test: cross-compile Flutter Linux bundles from macOS using LLVM toolchain"

module(name = "rules_flutter_cross_compile_example")

bazel_dep(name = "rules_flutter", version = "0.0.0")
bazel_dep(name = "rules_dart", version = "0.4.6")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "llvm", version = "0.8.11")

local_path_override(
    module_name = "rules_flutter",
    path = "../..",
)

flutter = use_extension("@rules_flutter//flutter:extensions.bzl", "flutter")
flutter.toolchain(flutter_version = "3.44.1")
flutter.pub(
    name = "deps",
    lock = "//:pubspec.lock",
)
use_repo(flutter, "deps", "flutter_toolchains")

register_toolchains("@flutter_toolchains//:all")

# Hermetic LLVM CC toolchain for cross-compilation.
# Provides clang + lld that can produce Linux ELF binaries from macOS.
register_toolchains("@llvm//toolchain:all")
