load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_apple//apple:macos.bzl", "macos_application")
load("@rules_apple//apple:versioning.bzl", "apple_bundle_version")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_shared_library.bzl", "cc_shared_library")
load("@rules_dart//dart:defs.bzl", "dart_test")
load("@rules_flutter//flutter:defs.bzl", "flutter_application")
load("@rules_flutter//flutter:linux.bzl", "flutter_linux_app")
load(
    "@rules_flutter//flutter:macos.bzl",
    "MACOS_MINIMUM_OS_VERSION",
    "flutter_macos_engine",
    "flutter_macos_framework_gen",
    "flutter_macos_info_plist_gen",
    "flutter_macos_menu_xib_gen",
    "flutter_macos_native_libs_gen",
    "flutter_macos_registrant_gen",
    "flutter_macos_runner_lib_gen",
)

exports_files(["pubspec.lock"])

cc_library(
    name = "add_cc",
    srcs = ["native/add.c"],
    hdrs = ["native/add.h"],
)

cc_shared_library(
    name = "add",
    visibility = ["//add_plugin:__pkg__"],
    deps = [":add_cc"],
)

flutter_application(
    name = "ffi_app",
    package_name = "ffi_example",
    main = "lib/main.dart",
    deps = [
        "//add_plugin",
        "@deps//:flutter",
        "@rules_flutter//flutter:material_icons",
    ],
)

flutter_macos_framework_gen(
    name = "ffi_macos_framework",
    application = ":ffi_app",
)

flutter_macos_registrant_gen(
    name = "ffi_macos_registrant",
    application = ":ffi_app",
)

flutter_macos_native_libs_gen(
    name = "ffi_macos_native_libs",
    application = ":ffi_app",
)

flutter_macos_engine(
    name = "flutter_engine",
)

flutter_macos_info_plist_gen(
    name = "ffi_macos_info_plist",
    app_name = "FFI Example",
)

flutter_macos_menu_xib_gen(
    name = "runner_menu_xib",
    app_name = "FFI Example",
)

flutter_macos_runner_lib_gen(
    name = "runner_lib",
    engine = ":flutter_engine",
    registrant = ":ffi_macos_registrant",
)

apple_bundle_version(
    name = "ffi_macos_version",
    build_version = "1.0",
    short_version_string = "1.0",
    tags = ["manual"],
)

macos_application(
    name = "ffi_macos",
    additional_contents = {
        ":ffi_macos_framework": "Frameworks",
        ":ffi_macos_native_libs": "Frameworks",
    },
    bundle_id = "com.example.ffi",
    infoplists = [":ffi_macos_info_plist"],
    minimum_os_version = MACOS_MINIMUM_OS_VERSION,
    resources = [":runner_menu_xib"],
    tags = ["manual"],
    version = ":ffi_macos_version",
    deps = [":runner_lib"],
)

flutter_linux_app(
    name = "ffi_linux",
    application = ":ffi_app",
    target_compatible_with = ["@platforms//os:linux"],
)

dart_test(
    name = "verify_macos_bundle_test",
    data = [":ffi_macos"],
    main = "test/verify_macos_bundle_test.dart",
    target_compatible_with = ["@platforms//os:macos"],
)

dart_test(
    name = "verify_linux_bundle_test",
    data = [":ffi_linux"],
    main = "test/verify_linux_bundle_test.dart",
    target_compatible_with = ["@platforms//os:linux"],
)

build_test(
    name = "ffi_build_test",
    targets = [
        ":ffi_app",
        ":add",
        "//add_plugin",
    ],
)

build_test(
    name = "macos_bundle_build_test",
    target_compatible_with = ["@platforms//os:macos"],
    targets = [":ffi_macos"],
)

build_test(
    name = "linux_bundle_build_test",
    target_compatible_with = ["@platforms//os:linux"],
    targets = [":ffi_linux"],
)
